# bismuth

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  DockerSetup.md  DynArray.bismuth  LICENSE.md  README.md  compileBSL.sh  compilell.sh  coverage.sh  docker.sh  flake.nix  makeArchive.sh  makeBuild.sh  runArchiveTests.sh  runDockerContainer.sh  runTests.sh  t.ll  t3.bismuth  tester.sh  testll.sh  updateClangCommands.sh
bdwgc/: LICENSE
bsl/: README.md
bsl/lib/: Arrays.bismuth  Lists.bismuth  Optional.bismuth  Types.bismuth
cmake/: ANTLR.cmake  ASTGen.cmake  CLI.cmake  CPM.cmake  CodeCoverage.cmake  Codegen.cmake  LLVM.cmake  LTL.cmake  Matchit.cmake  NoInSourceBuilds.cmake  ProjectGlobals.cmake  Runtime.cmake  Semantic.cmake  Symbol.cmake  Testing.cmake  Utility.cmake  platform_settings.cmake
paper/: links.bismuth  links.bismuth.expected.ll  links.ll  links.prism  links2-o.ll  links2.bismuth  links2.bismuth.expected.ll  links2.ll  links2.prism  links3.bismuth  links3.bismuth.expected.ll  links3.ll  links3.prism  links4.bismuth  links4.bismuth.expected.ll  links4.ll  links4.prism
programs/: BasicForLoop.bismuth  BasicForLoop.bismuth.expected.ll  GC-test.bismuth  GC-test.bismuth.expected.ll  Lambda1.bismuth  Lambda1.bismuth.expected.ll  Lambda1.wpl  Lambda2.bismuth  Lambda2.bismuth.expected.ll  Lambda2.prism  Lambda2.wpl  Lambda2a.bismuth  Lambda2a.bismuth.expected.ll  Lambda2a.wpl  Lambda2b.bismuth  Lambda2b.bismuth.expected.ll  Lambda2b.prism  Lambda2b.wpl  Lambda3.bismuth  Lambda3.bismuth.expected.ll  Lambda3.prism  Lambda3.wpl  Let.wpl  SendChannel.bismuth  SendChannel.bismuth.expected.ll  SendChannel.prism  TArray.bismuth  TArray.bismuth.expected.ll  TArray2.bismuth  TArray2.bismuth.expected.ll  TBox.bismuth  TBox.bismuth.expected.ll  TBox.prism  TBox2.bismuth  TBox2.bismuth.expected.ll  TStruct.bismuth  TStruct.bismuth.expected.ll  TStruct.prism  TStructCopy.bismuth  TStructCopy.bismuth.expected.ll  (+245 more)
programs/ALevel/: ANegative1.wpl  ANegative2.bismuth  ANegative2.wpl  APositive1.bismuth  APositive1.bismuth.expected.ll  APositive1.prism  APositive1.wpl  APositive2.bismuth  APositive2.bismuth.expected.ll  APositive2.prism  APositive2.wpl  APositive3.bismuth  APositive3.bismuth.expected.ll  APositive3.prism
programs/BLevel/: BNegative1.bismuth  BNegative1.wpl  BNegative2.bismuth  BNegative2.wpl  BPositive1.bismuth  BPositive1.bismuth.expected.ll  BPositive1.prism  BPositive1.wpl  BPositive2.bismuth  BPositive2.bismuth.expected.ll  BPositive2.prism  BPositive2.wpl
programs/CLevel/: CNegative1.wpl  CNegative2.wpl  CPositive2.bismuth  CPositive2.bismuth.expected.ll  CPositive2.prism  CPositive2.wpl
programs/adv/: ERROR.prism  LambdaDef.bismuth  LambdaDef.bismuth.expected.ll  LambdaDef.prism  LambdaDef.wpl  NestedEnum.bismuth  NestedEnum.bismuth.expected.ll  NestedEnum.prism  NestedEnum.wpl  StructTest2.bismuth  StructTest2.bismuth.expected.ll  StructTest2.prism  StructTest2.wpl  StructTest3.bismuth  StructTest3.bismuth.expected.ll  StructTest3.prism  StructTest3.wpl  StructTest3a.bismuth  StructTest3a.bismuth.expected.ll  StructTest3a.prism  StructTest3a.wpl  StructTest3b.bismuth  StructTest3b.bismuth.expected.ll  StructTest3b.prism  StructTest3b.wpl  StructTest4.bismuth  StructTest4.bismuth.expected.ll  StructTest4.wpl  enumPassing-fn.bismuth  enumPassing-fn.bismuth.expected.ll  enumPassing-fn.prism  enumPassing.bismuth  enumPassing.wpl  (+9 more)
src/: CMakeLists.txt  bismuthc.cpp  bismuthc.h  wplc.cpp  wplc.h
src/astgen/: ASTGenVisitor.cpp  CMakeLists.txt  ProtocolVisitor.cpp
src/astgen/include/: ASTGenVisitor.h  PropertyManager.h  ProtocolVisitor.h
src/cli/: CMakeLists.txt  Compile.cpp
src/cli/include/: Compile.h
src/codegen/: CMakeLists.txt  CodegenUtils.cpp  CodegenVisitor.cpp  DeepCopyVisitor.cpp  DynArrayVisitor.cpp
src/codegen/include/: CodegenUtils.h  CodegenVisitor.h  DeepCopyVisitor.h  DynArrayVisitor.h
src/lexparse/: .gitignore  Bismuth.g4  CMakeLists.txt  WPL.g4  generate.sh
src/ltl/: CMakeLists.txt  DFA.cpp  LTLMonitor.cpp  LTLMonitorDef.cpp
src/ltl/include/: DFA.h  GenCx.h  LTLMonitor.h  LTLMonitorDef.h  LtlMonitor.h
src/runtime/: CMakeLists.txt  bismuth_runtime.c  bismuth_runtime.h  wpl_runtime.c  wpl_runtime.h
src/runtime/core/: ArrayStream.cpp  CloneMapWrapper.cpp  IPCBuffer.cpp  Messages.cpp  StateManager.cpp
src/runtime/core/include/: AQueue.h  ArrayStream.h  CloneMapWrapper.h  IPCBuffer.h  Messages.h  StateManager.h
src/semantic/: CMakeLists.txt  PropertyManager.cpp  ProtocolVisitor.cpp  SemanticVisitor.cpp
src/semantic/include/: PropertyManager.h  ProtocolVisitor.h  SemanticVisitor.h
src/symbol/: CMakeLists.txt  Context.cpp  FQN.cpp  Protocol.cpp  RawAST.cpp  STManager.cpp  Scope.cpp  Symbol.cpp  SymbolUtils.cpp  Type.cpp  TypedAST.cpp
src/symbol/include/: Context.h  FQN.h  Protocol.h  RawAST.h  STManager.h  Scope.h  Symbol.h  SymbolUtils.h  Type.h  TypedAST.h
src/utility/: BismuthErrorHandler.cpp  CMakeLists.txt  WPLErrorHandler.cpp
src/utility/include/: BismuthErrorHandler.h  BismuthInternalError.h  CUtils.h  CastUtils.h  CompilerFlags.h  ExecUtils.h  HashUtils.h  LinkedMap.h  Strings.h  TypeVisitor.h  WPLErrorHandler.h  test_error_handlers.h
test/: CMakeLists.txt
test/cli/: cli_tests.cpp
test/cmake/: CliTests.cmake  CodegenTests.cmake  LexParseTests.cmake  SemanticTests.cmake  SymbolTests.cmake
test/codegen/: codegen_tests.cpp
test/lexparse/: scanner_tests.cpp
test/semantic/: assignment_tests.cpp  conditional_tests.cpp  loop_tests.cpp  procedure_tests.cpp  program_tests.cpp  select_tests.cpp  semantic_tests.cpp
test/symbol/: scope_tests.cpp  st_manager_tests.cpp  symbol_tests.cpp
unused/: ANegative1.wpl  CNegative1.wpl  CNegative2.wpl  CPositive1.wpl  Let.wpl  doubleArg1b.bismuth  doubleArg1c.bismuth  doubleArg1d.bismuth  test-arrayAssign-fn.wpl  test-runtime.wpl  test1-fn.wpl  test11err.wpl  test19.wpl  test1a-fn.wpl  test6 -fn.wpl  test9Err.wpl  test9b.wpl  test9ba.wpl  test9bv.wpl  test9i.wpl  test9ia.wpl  test9iv.wpl  test9s.wpl  test9sa-1.wpl  test9sa.wpl  test9sv.wpl  testGlobalAndLocal.wpl
(+69 files in other folders)
